--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,12 +4,23 @@
 @tailwind utilities;
 
 @layer components {
+  /* utilities */
+  .transition-durration {
+    @apply ease-in-out duration-300;
+  }
+
+  /* Navbar */
+  .nav-item {
+    @apply hover:text-soft-orange transition-durration;
+  }
+
+  /* New Section */
   .new-section-card {
     @apply border-b border-blue-gray-500 mb-7;
   }
 
   .new-section-card-header {
-    @apply text-2xl pb-3;
+    @apply text-2xl pb-3 hover:text-soft-orange cursor-pointer transition-durration;
   }
 
   .new-section-card-text {
@@ -25,7 +36,7 @@
   }
 
   .article-card-header {
-    @apply text-lg font-semibold pb-2;
+    @apply text-lg font-semibold pb-2 hover:text-soft-red cursor-pointer transition-durration;
   }
 
   .article-card-text {
